# linguamorph

./: .gitignore  README.md  linguamorph.py  prepare_dictionary.py  pyproject.toml
